<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="@color/FondoOscuro">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:orientation="horizontal">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <ImageView
            android:id="@+id/imgvPlato"
            android:layout_width="130dp"
            android:layout_height="120dp"
            android:src="@drawable/noimage"/>
    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="85dp"
                    android:layout_height="wrap_content"
                    android:text="@string/CodigoPlato"
                    android:textColor="@color/LetraBlanco"
                    android:layout_marginRight="10dp"/>

                <TextView
                    android:id="@+id/tvCodigoPlato"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/LetraGrisClarito"
                    android:textColor="@color/grisClarito"
                    android:hint="0"/>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/PrecioTotal"
                    android:textColor="@color/LetraBlanco"
                    android:layout_marginLeft="20dp"/>

                <TextView
                    android:id="@+id/tvPrecioPlato"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:textColorHint="@color/LetraGrisClarito"
                    android:textColor="@color/grisClarito"
                    android:hint="0.00"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:textColor="@color/grisClarito"
                    android:text="€"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/NombrePlato"
                    android:textColor="@color/LetraBlanco"
                    android:layout_marginBottom="10dp"/>

                <TextView
                    android:id="@+id/tvNombrePlato"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:textColorHint="@color/LetraGrisClarito"
                    android:textColor="@color/grisClarito"
                    android:hint="@string/PlatoComida"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ListaAlergenos"
                    android:textColor="@color/LetraBlanco"
                    android:layout_marginBottom="10dp"/>

                <TextView
                    android:id="@+id/tvListaAlergenos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:textColorHint="@color/LetraGrisClarito"
                    android:textColor="@color/grisClarito"
                    android:hint="@string/AlergenosPlato"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Descripcion"
                    android:textColor="@color/LetraBlanco"
                    android:layout_marginBottom="10dp"/>

                <TextView
                    android:id="@+id/tvDescripcionPlato"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:textColorHint="@color/LetraGrisClarito"
                    android:textColor="@color/grisClarito"
                    android:hint="@string/DescripcionPlato"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
