<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/FondoOscuro"
    android:orientation="vertical">

    <!--tools:context=".fragment_categorias"-->


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/etMeterCodigoPlato"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:hint="@string/MeterCodigoPlato"
            android:textColor="@color/LetraGrisClarito"
            android:textColorHint="@color/LetraGrisClarito"/>

        <EditText
            android:id="@+id/etMeterNombrePlato"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:hint="@string/MeterNombrePlato"
            android:layout_marginLeft="16dp"
            android:textColor="@color/LetraGrisClarito"
            android:textColorHint="@color/LetraGrisClarito"/>
    </LinearLayout>


    <Button
        android:id="@+id/btnAplicarCambios"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:text="@string/AplicarFiltros"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="110dp"
        android:background="@drawable/redondear_botones"
        android:backgroundTint="@color/BotonAplicarFiltros"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grisClarito"
        android:layout_marginTop="20dp"/>


    <ListView
        android:id="@+id/lvListadoPlatos"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
</LinearLayout>