<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="20dp"
    android:padding="20dp"
    android:id="@+id/clAlertDialogCantidadContainer">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:backgroundTint="@color/AlertDialogBody"
        android:background="@drawable/alert_dialog_cantidad_plato_background_body"
        android:id="@+id/clAlertDialogCantidad"
        >
        <TextView
            android:background="@drawable/alert_dialog_cantidad_plato_background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvTitulo"
            android:padding="10dp"
            android:textColor="@color/TituloBlanco1"
            android:text="@string/Titulo"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            android:gravity="center"
            />
        <TextView
            android:gravity="center"
            android:text="@string/Texto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvMensaje"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="18dp"
            android:layout_marginBottom="40dp"
            android:textColor="@color/TextoBlanco1"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/tvCantidad"
            app:layout_constraintTop_toBottomOf="@+id/tvTitulo"
            />
        <Button
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:id="@+id/btnMenos"
            android:layout_marginStart="100dp"
            android:layout_marginTop="18dp"
            android:layout_marginBottom="40dp"
            android:backgroundTint="@color/AlertDialogBoton"
            android:background="@drawable/alert_dialog_cantidad_plato_background"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tvCantidad"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvMensaje"
            android:textSize="14sp"
            android:textColor="@color/white"
            android:text="-"
            />
        <TextView
            android:gravity="center"
            android:text="1"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:id="@+id/tvCantidad"
            android:layout_marginTop="18dp"
            android:layout_marginBottom="40dp"
            android:textColor="@color/TextoBlanco1"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/btnMas"
            app:layout_constraintEnd_toStartOf="@+id/btnMenos"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvMensaje"
            />
        <Button
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:id="@+id/btnMas"
            android:layout_marginEnd="100dp"
            android:layout_marginTop="18dp"
            android:layout_marginBottom="40dp"
            android:backgroundTint="@color/AlertDialogBoton"
            android:background="@drawable/alert_dialog_cantidad_plato_background"
            app:layout_constraintStart_toEndOf="@+id/tvCantidad"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvMensaje"
            android:textSize="14sp"
            android:textColor="@color/white"
            android:text="+"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:id="@+id/btnCancelar"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="@color/AlertDialogBoton"
        android:background="@drawable/alert_dialog_cantidad_plato_background"
        app:layout_constraintBottom_toBottomOf="@+id/clAlertDialogCantidad"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnConfirmar"
        app:layout_constraintTop_toBottomOf="@+id/clAlertDialogCantidad"
        android:textSize="14sp"
        android:textColor="@color/white"
        android:text="@string/Cancelar"
        />

    <Button
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:id="@+id/btnConfirmar"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="40dp"
        android:backgroundTint="@color/AlertDialogBoton"
        android:background="@drawable/alert_dialog_cantidad_plato_background"
        app:layout_constraintBottom_toBottomOf="@+id/clAlertDialogCantidad"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnCancelar"
        app:layout_constraintTop_toBottomOf="@+id/clAlertDialogCantidad"
        android:textSize="14sp"
        android:textColor="@color/white"
        android:text="@string/Confirmar"
        />

</androidx.constraintlayout.widget.ConstraintLayout>