<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@color/FondoOscuro"
    tools:context=".PerfilConfiguracion">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="3"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Usuario"
            android:textSize="30dp"
            android:textColor="@color/TituloBlanco1"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:gravity="center|top"
        android:orientation="horizontal"
        >
        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/ivPerfil"
            android:layout_marginTop="10dp"
            android:layout_width="200dp"
            android:layout_height="210dp"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            android:scaleType="centerCrop"
            android:src="@drawable/noimage"
            app:shapeAppearanceOverlay="@style/rardiusImage2"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity=""
        android:orientation="vertical"
        >

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Usuario"
            android:textColorHint="@color/TextoHint1"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/TextoBlanco1"
                android:backgroundTint="@color/white"
                android:id="@+id/etNombreUsuario"
                android:enabled="false"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Nombre y Apellidos:"
            android:textColorHint="@color/TextoHint1"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/TextoBlanco1"
                android:backgroundTint="@color/white"
                android:id="@+id/etNombreEmpleado"
                />
        </com.google.android.material.textfield.TextInputLayout>


        <Switch
            android:id="@+id/swReset"
            android:layout_marginVertical="40dp"
            android:textColor="@color/LetraBlanco"
            android:textSize="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Restablecer Contraseña   "
            android:layout_marginTop="10dp"/>

    </LinearLayout>
<!--
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Vista"
            android:textColor="@color/LetraBlanco"
            android:textSize="30dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/black"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:gravity="center|left"
            >
            <TextView
                android:textColor="@color/LetraBlanco"
                android:textSize="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Tema: "
                />
            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/rbClaro"
                    android:layout_marginLeft="40dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Claro"
                    android:textColor="@color/LetraBlanco"/>

                <RadioButton
                    android:id="@+id/rbOscuro"
                    android:layout_marginLeft="30dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Oscuro"
                    android:textColor="@color/LetraBlanco"/>

            </RadioGroup>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:gravity="center|left"
            >
            <TextView
                android:textColor="@color/LetraBlanco"
                android:textSize="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Idioma: "
                />
            <Spinner
                android:id="@+id/spnIdiomas"
                android:layout_marginLeft="40dp"
                android:layout_width="200dp"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </LinearLayout>
-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:gravity="center"
        android:orientation="horizontal"
        >
        <Button
            android:id="@+id/btnCerrarSesion"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/CerrarSesion"
            android:textColor="@color/TextoBlanco1"
            android:layout_marginRight="20dp"
            android:background="@drawable/redondear_botones"
            android:backgroundTint="@color/rojoClarito" />

        <Button
            android:id="@+id/btnAplicarCambios"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:background="@drawable/redondear_botones"
            android:backgroundTint="@color/BotonAccederOscuro"
            android:textColor="@color/TextoBlanco1"
            android:text="@string/Guardar" />

    </LinearLayout>

</LinearLayout>